--- a/upload-server/web.config
+++ b/upload-server/web.config
@@ -8,18 +8,8 @@
       </requestFiltering>
     </security>
     
-    <!-- Disable ARR request buffering for upload endpoint to prevent truncation -->
-    <rewrite>
-      <rules>
-        <rule name="Disable buffering for uploads">
-          <match url="cgi-bin/app.py" />
-          <action type="Rewrite" url="{R:0}" />
-          <serverVariables>
-            <set name="HTTP_X_ARR_DisableBuffering" value="true" />
-          </serverVariables>
-        </rule>
-      </rules>
-    </rewrite>
+    <!-- Enable ARR request buffering for uploads to prevent truncation -->
+    <!-- Note: Removed HTTP_X_ARR_DisableBuffering - we WANT buffering for large uploads -->
     
     <httpProtocol>
       <customHeaders>
