--- a/upload-server/web.config
+++ b/upload-server/web.config
@@ -8,8 +8,21 @@
       </requestFiltering>
     </security>
     
-    <!-- Enable ARR request buffering for uploads to prevent truncation -->
-    <!-- Note: Removed HTTP_X_ARR_DisableBuffering - we WANT buffering for large uploads -->
+    <!-- URL Rewrite rules to proxy to Waitress WSGI server -->
+    <rewrite>
+      <rules>
+        <rule name="Proxy to Waitress WSGI" stopProcessing="true">
+          <match url="^cgi-bin/app\.py(.*)$" />
+          <action type="Rewrite" url="http://localhost:8080/{R:1}" />
+        </rule>
+      </rules>
+    </rewrite>
+    
+    <!-- Application Request Routing (ARR) settings -->
+    <proxy>
+      <!-- Enable ARR buffering for complete requests -->
+      <cache enabled="false" />
+    </proxy>
     
     <httpProtocol>
       <customHeaders>
