add static serving to waitress server

--- a/upload-server/web.config
+++ b/upload-server/web.config
@@ -11,7 +11,14 @@
     <!-- URL Rewrite rules to proxy to Waitress WSGI server -->
     <rewrite>
       <rules>
-        <rule name="Proxy to Waitress WSGI" stopProcessing="true">
+        <!-- Proxy admin.html and upload.html to Waitress -->
+        <rule name="Proxy HTML files to Waitress" stopProcessing="true">
+          <match url="^(admin\.html|upload\.html)$" />
+          <action type="Rewrite" url="http://localhost:8080/{R:1}" />
+        </rule>
+        
+        <!-- Proxy API requests to Waitress -->
+        <rule name="Proxy API to Waitress" stopProcessing="true">
           <match url="^cgi-bin/app\.py(.*)$" />
           <action type="Rewrite" url="http://localhost:8080/{R:1}" />
         </rule>
